--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -24,7 +24,7 @@
   align-items: left;
   justify-content: left;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #444444;
 }
 
 .App-link {
@@ -55,15 +55,40 @@ p {
 }
 
 body {
-  background-color: #fafafa
+  background-color: #F0F8FF
 }
 
 img {
   width: 250px;
   height: 250px;
+  margin-bottom: 2%;
+}
+
+.Bulletin {
+  width: 600px;
+  height: 600px;
+  border-radius: 10px;
+}
+
+.fence {
+  width: 100%;
+  height: 100%;
 }
 
 .balanceDiv {
+  border-color: #000;
+  border-radius: 5px;
+  margin-top: 1%;
+  margin-bottom: 8%;
+  height: 20%;
+  border: 1px solid rgba(0, 0, 0, 1);
+  justify-content: left;
+  text-align: left;
+  font-size: large;
+  text-align: center;
+}
+
+.keyDiv {
   border-color: #000;
   border-radius: 5px;
   margin-top: 1%;
@@ -77,12 +102,14 @@ table {
   margin-top: 0%;
   border: 1px solid black;
   border-collapse: collapse;
+  font-family: sans-serif;
 }
 
 th,
 td,
 tr {
   border: 1px solid black;
+  font-family: sans-serif;
 }
 
 tr {
@@ -93,8 +120,23 @@ td {
   width: 75%;
 }
 
+div {
+  white-space: pre;
+  font-family: sans-serif;
+}
+
 h3 {
-  margin-bottom: 0%;
+  margin-bottom: 1%;
+  margin-top: 0%;
+  margin-left: -7%;
+}
+
+h4 {
+  margin-bottom: 1%;
+  margin-top: 0%;
+  background-color: #007aff;
+  color: #fff;
+  border-radius: 5px;
 }
 
 @keyframes App-logo-spin {
@@ -104,4 +146,14 @@ h3 {
   to {
     transform: rotate(360deg);
   }
+}
+
+input {
+  border-radius: 5px;
+  border: 1px solid black;
+  text-align: center;
+  font-size: 20px;
+  font-family: sans-serif;
+  height: 10%;
+  width: 90%;
 }
