--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,4 @@
+
 @font-face {
   font-family: 'Alagard';
   src: url('./assets/alagard.ttf') format('truetype');
@@ -38,8 +39,13 @@
 
 .Button {
   color:#fff;
-  margin-left: 20%;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: #9e5a3d;
+  border-radius: 15px;
+  font-size: 30px;
+  height: 40px;
+  width: 40%;
+  font-family: 'Alagard';
+  cursor: pointer;
 }
 
 .bidSubmission {
@@ -60,23 +66,40 @@ p {
 }
 
 body {
-  background-color: #F0F8FF
+  margin: 0;
+  padding: 0;
+}
+
+.pasture {
+  background-image: url("./assets/field.png");
+  background-repeat: no-repeat;
+  background-size:cover;
+  margin: 0;
+  padding: 0;
+}
+
+.wall {
+  background-image: url("./assets/stoneWall.png");
+  background-repeat: no-repeat;
+  background-size:cover;
+  margin: 0;
+  padding: 0;
 }
 
 img {
   width: 250px;
   height: 250px;
-  margin-bottom: 2%;
+  margin-top: 3%;
 }
 
 .Bulletin {
-  width: 600px;
-  height: 600px;
+  width: 80%;
+  height: 80%;
   border-radius: 10px;
 }
 
 .parchment {
-  width: 700px;
+  width: 80%;
   height: 700px;
   border-radius: 10px;
   margin-right: 15%;
@@ -139,10 +162,13 @@ div {
 
 h1 {
   font-family: 'Alagard';
+  margin-top: 0px;
+  color: #fff;
 }
 
 h2 {
   font-family: 'Alagard';
+  color: #fff;
 }
 
 h3 {
@@ -152,8 +178,8 @@ h3 {
 }
 
 h4 {
-  margin-bottom: 0%;
-  margin-top: 3%;
+  margin-bottom: 1%;
+  margin-top: 2%;
   color: #000;
   font-size: 25px; 
   font-family: 'Alagard';
@@ -162,6 +188,7 @@ h4 {
 
 .title {
   text-decoration: underline black;
+  white-space: pre;
 }
 
 .gold {
@@ -185,13 +212,12 @@ h4 {
 }
 
 input {
+  border: 2px solid black;
   border-radius: 5px;
   text-align: center;
-  margin-top: 1%;
-  font-size: 20px;
-  font-family: sans-serif;
-  height: 10%;
-  width: 20%;
+  font-size: 30px;
+  font-family: 'Alagard';
+  width: 15%;
   display:inline;
   background-color: rgb(0, 0, 0, 0);
 }
