set up submit and handleChange

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -202,6 +202,11 @@ h4 {
   text-decoration: underline black;
 }
 
+footer {
+  background-color: #643629;
+  height: 500px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
